# CanStepDriver

./: .gitattributes  .gitignore  CMakeLists.txt  CMakeSettings.json  Makefile  README.md
CanStepDriverPowerstep/: 00 - Structure.SchDoc  01 - Power.SchDoc  02 - MCU.SchDoc  03 - Interfaces.SchDoc  CanStepDriverPowerstep.PrjPcb  CanStepDriverPowerstep.PrjPcbStructure  Job1.OutJob
CoreApp/: DBStorage.hpp  Globals.cpp  Globals.hpp  MemoryStorage.cpp  MemoryStorage.hpp  Motor.hpp  MotorController.hpp  RoutineInterface.cpp  RoutineLed.cpp  RoutineMain.cpp  Routines.hpp  StorableSettings.hpp  main.cpp  main.hpp
CoreBoard/: Board.cpp  Board.hpp  BoardConfig.cpp  BoardConfig.hpp  BoardInterface.cpp  BoardInterface.hpp  BoardMemory.cpp  BoardMemory.hpp
CoreLib/: SharedLib.cpp  SharedLib.hpp
CoreOS/: FreeRTOSConfig.h  OS_Wrappers.cpp  OS_Wrappers.hpp  etl_profile.h
Hardware/CanStepDriverMosfets/: 00 - Structure.SchDoc  03 - Power.SchDoc  CanStepDriverMosfets.Annotation  CanStepDriverMosfets.PrjPcb  CanStepDriverMosfets.PrjPcbStructure
Hardware/CanStepDriverMosfets/CubeMX/: CanStepDriverMosfets.ioc
Hardware/CanStepDriverPowerstep/: 00 - Structure.SchDoc  03 - Power.SchDoc  CanStepDriverPowerstep.Annotation  CanStepDriverPowerstep.PrjPcb
Hardware/DeviceSheets/: 01 - MCU.SchDoc  02 - Interfaces.SchDoc
LowLevel/: LowLevel.h
LowLevel/CanStepDriverF429/: .mxproject  CanStepDriverF429.ioc  LowLevel.c  Makefile  STM32F429ZITx_FLASH.ld
LowLevel/CanStepDriverF429/Core/Inc/: main.h  stm32f4xx_hal_conf.h
LowLevel/CanStepDriverF429/Core/Src/: gpio.c  i2c.c  ll_main.c  usart.c
LowLevel/CanStepDriverMosfets/: .mxproject  CanStepDriverMosfets.ioc  LowLevel.c  Makefile
LowLevel/CanStepDriverMosfets/Core/Inc/: main.h
LowLevel/CanStepDriverMosfets/Core/Src/: ll_main.c  stm32g4xx_it.c
LowLevel/CanStepDriverPowerstep/: .mxproject  CanStepDriverPowerstep.ioc  LowLevel.c  Makefile
LowLevel/CanStepDriverPowerstep/Core/Inc/: ll_main.h  main.h  stm32g4xx_it.h
LowLevel/CanStepDriverPowerstep/Core/Src/: gpio.c  i2c.c  ll_init.c  ll_main.c  stm32g4xx_hal_msp.c  stm32g4xx_it.c
